--- a/_notebooks/2022-11-07-FixingMistakes.ipynb
+++ b/_notebooks/2022-11-07-FixingMistakes.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Question 16:\n",
+    "Question 16:\n",
     "- The answer I put was A when the answer is B because for A the packets can be sent and recieved in any order"
    ]
   },
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Question 17:\n",
+    "Question 17:\n",
     "- The answer I put was A but the correct answer is D because protocols are previously agreed upon rules"
    ]
   },
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Question 28:\n",
+    "Question 28:\n",
     "- The answer I put was D but the correct answer is C because the code correctly sets cost and Numunits"
    ]
   },
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Question 35:\n",
+    "Question 35:\n",
     "- The answer I put was C but the correct answer is D because the IF statement works and gives the desired output"
    ]
   },
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Question 38:\n",
+    "Question 38:\n",
     "- The answer I put was C but the correct answer is B because it corrects states the new variables "
    ]
   },
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-Question 45:\n",
+    "Question 45:\n",
     "- The answer I put was C but the correct answer is B because it correctly prints the values of count1 and count2"
    ]
   }
