--- a/_notebooks/2022-11-27-BinaryHacksPlan.ipynb
+++ b/_notebooks/2022-11-27-BinaryHacksPlan.ipynb
@@ -20,7 +20,27 @@
    "source": [
     "Ideas:\n",
     "- Put the numbers under each light to show what number you are adding\n",
-    "- "
+    "- \n",
+    "Notes:\n",
+    "Unit 3.1 Variables and Assignments\n",
+    "Python:\n",
+    "- For number variables you set the name and the value\n",
+    "- Boolean variables are true or false\n",
+    "- You can append to a list to add values to it\n",
+    "Java:\n",
+    "- Define a variable with var\n",
+    "- const sets a value that doesn't change\n",
+    "\n",
+    "3.2 Data Abstraction\n",
+    "Python:\n",
+    "- In AP Exams index values start with 1 not 0\n",
+    "- You can break down lists into more lists\n",
+    "- Len gives you how many items are in the list\n",
+    "- Split function splits a string into a list\n",
+    "- The function .join makes a list into a single string \n",
+    "Java: \n",
+    "- Combine previous lists to create new lists with new data\n",
+    "- Convert Java output to HTML for a nice table and output"
    ]
   }
  ],
