--- a/_notebooks/2022-11-28-Lesson1Notes.ipynb
+++ b/_notebooks/2022-11-28-Lesson1Notes.ipynb
@@ -16,24 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 43>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#album = input(\"Which album do want?\")\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m#song = input(\"Which song number do you want?\")\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m albums \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     (\u001b[39m\"\u001b[39m\u001b[39mWelcome to my Nightmare\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mAlice Cooper\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m1975\u001b[39m,   \u001b[39m# First album list\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m      [\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=40'>41</a>\u001b[0m      ),\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=41'>42</a>\u001b[0m ]\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-11-28-Lesson1Notes.ipynb#W3sdnNjb2RlLXJlbW90ZQ%3D%3D?line=42'>43</a>\u001b[0m \u001b[39mprint\u001b[39m(albums[\u001b[39m1\u001b[39;49m,\u001b[39m1\u001b[39;49m])\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 'Psycho')\n"
      ]
     }
    ],
    "source": [
-    "#album = input(\"Which album do want?\")\n",
-    "#song = input(\"Which song number do you want?\")\n",
+    "album = input(\"Which album do want?\")\n",
+    "song = int(input(\"Which song number do you want?\"))\n",
     "\n",
     "albums = [\n",
     "    (\"Welcome to my Nightmare\", \"Alice Cooper\", 1975,   # First album list\n",
@@ -74,7 +70,17 @@
     "     ]\n",
     "     ),\n",
     "]\n",
-    "print(albums[1])\n"
+    "\n",
+    "if album == 'More Mayhem' :\n",
+    "    album = 3\n",
+    "elif album == 'Nightflight':\n",
+    "    album = 2\n",
+    "elif album == 'Bad Company':\n",
+    "    album = 2\n",
+    "else:\n",
+    "    album = 1\n",
+    "song = song -1\n",
+    "print(albums[album][3][song])\n"
    ]
   }
  ],
