--- a/2022-11-18-expressions-and-strings.ipynb
+++ b/2022-11-18-expressions-and-strings.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,9 @@
      "output_type": "stream",
      "text": [
       "3  is divisible by 3\n",
+      "4  isn't divisible by 3\n",
       "9  is divisible by 3\n",
+      "76  isn't divisible by 3\n",
       "891  is divisible by 3\n"
      ]
     }
@@ -96,6 +98,7 @@
     "        print(num, \" is divisible by 3\")\n",
     "        continue\n",
     "    else:\n",
+    "        print(num, \" isn't divisible by 3\")\n",
     "        continue\n",
     "            "
    ]
@@ -109,11 +112,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
-    "def convert():"
+    "num = int(input(\"What is your Number?\"))\n",
+    "bin = []\n",
+    "def convert():\n",
+    "    rem = 2\n",
+    "    while rem != 0:\n",
+    "        rem = num % 2\n",
+    "        bin.append(rem)\n",
+    "        rem = int(rem/2)\n",
+    "        print(bin)\n",
+    "convert()\n",
+    "    "
    ]
   },
   {
@@ -170,18 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "bye\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "#substring = string[start:end] \n",
     "#the substring will have the characters including the index \"start\" to the character BEFORE the index \"end\"\n",
     "#len(string) will print the length of string\n",
     "\n",
     "string = \"hellobye\"\n",
-    "print()\n",
-    "print()\n",
-    "print()"
+    "print(string[0:5])\n",
+    "print(string[5:8])\n",
+    "print(len(string))"
    ]
   },
   {
@@ -193,15 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computerscience\n"
+     ]
+    }
+   ],
    "source": [
     "#string1 + string2 will add string2 to the end of string1\n",
     "\n",
     "string1 = \"computer\"\n",
     "string2 = \"science\"\n",
-    "string3 = \n",
+    "string3 = string1 + string2\n",
     "print(string3)"
    ]
   },
@@ -214,15 +253,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jaden\n",
+      "5\n",
+      "max\n",
+      "3\n",
+      "dylan\n",
+      "5\n",
+      "orlando\n",
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "names = [\"jaden\",\"max\",\"dylan\",\"orlando\"]\n",
     "\n",
     "def length(list):\n",
-    "    for  in :\n",
-    "        print()\n",
+    "    for name in names:\n",
+    "        print(name)\n",
+    "        print(len(name))\n",
     "\n",
     "length(names)\n"
    ]
