--- a/_notebooks/2022-11-28-Lesson1Notes.ipynb
+++ b/_notebooks/2022-11-28-Lesson1Notes.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 'Psycho')\n"
+      "(1, 'I Turned to Stone')\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "else:\n",
     "    album = 1\n",
     "song = song -1\n",
-    "print(albums[album][3][song])\n"
+    "print(albums[int(album)][3][int(song)])\n"
    ]
   }
  ],
