--- a/_notebooks/2022-11-28-Lesson1Notes.ipynb
+++ b/_notebooks/2022-11-28-Lesson1Notes.ipynb
@@ -16,6 +16,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n",
+      "308 4\n",
+      "5 6\n",
+      "306 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [104, 101, 4, 105, 308, 103, 5, 107,\n",
+    "        100, 306, 106, 102, 108]    # list of the different numerical values\n",
+    "min_valid = 100  # minimum value\n",
+    "max_valid = 200  # maximum value\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range (len(data)):\n",
+    "    if data[i] < 100:\n",
+    "        print(data[i], i)\n",
+    "    if data[i] > 200:\n",
+    "        print(data[i], i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -23,12 +54,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 'I Turned to Stone')\n"
+      "(3, 'Ready for Love')\n"
      ]
     }
    ],
    "source": [
-    "album = input(\"Which album do want?\")\n",
+    "album = int(input(\"Which album do want?\"))\n",
     "song = int(input(\"Which song number do you want?\"))\n",
     "\n",
     "albums = [\n",
