--- a/_notebooks/2022-11-28-Lesson1Notes.ipynb
+++ b/_notebooks/2022-11-28-Lesson1Notes.ipynb
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 'Ready for Love')\n"
+      "Playing (1, \"Can't Get Enough\")\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
     "else:\n",
     "    album = 1\n",
     "song = song -1\n",
-    "print(albums[int(album)][3][int(song)])\n"
+    "print(\"Playing\", albums[int(album)][3][int(song)])\n"
    ]
   }
  ],
