--- a/2022-11-18-expressions-and-strings.ipynb
+++ b/2022-11-18-expressions-and-strings.ipynb
@@ -127,12 +127,8 @@
     "num = int(input(\"What is your Number?\"))\n",
     "bin = []\n",
     "def convert():\n",
-    "    rem = 2\n",
-    "    while rem != 0:\n",
-    "        rem = num % 2\n",
-    "        bin.append(rem)\n",
-    "        rem = int(rem/2)\n",
-    "        print(bin)\n",
+    "    \n",
+    "    \n",
     "convert()\n",
     "    "
    ]
@@ -253,21 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jaden\n",
-      "5\n",
-      "max\n",
-      "3\n",
-      "dylan\n",
-      "5\n",
-      "orlando\n",
-      "7\n"
+      "jaden 5\n",
+      "max 3\n",
+      "dylan 5\n",
+      "orlando 7\n"
      ]
     }
    ],
@@ -276,8 +268,7 @@
     "\n",
     "def length(list):\n",
     "    for name in names:\n",
-    "        print(name)\n",
-    "        print(len(name))\n",
+    "        print(name, len(name))\n",
     "\n",
     "length(names)\n"
    ]
