--- a/2022-11-18-expressions-and-strings.ipynb
+++ b/2022-11-18-expressions-and-strings.ipynb
@@ -112,24 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num = int(input(\"What is your Number?\"))\n",
     "bin = []\n",
     "def convert():\n",
-    "    \n",
-    "    \n",
-    "convert()\n",
+    "    print(\"hi\")\n",
     "    "
    ]
   },
