--- a/2022-11-18-expressions-and-strings.ipynb
+++ b/2022-11-18-expressions-and-strings.ipynb
@@ -112,15 +112,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary of 23  is: 10111\n"
+     ]
+    }
+   ],
    "source": [
-    "num = int(input(\"What is your Number?\"))\n",
-    "bin = []\n",
-    "def convert():\n",
-    "    print(\"hi\")\n",
-    "    "
+    "decimal = int(input(\"Enter a decimal number \\n\"))\n",
+    "binary = 0\n",
+    "ctr = 0\n",
+    "new = decimal \n",
+    "\n",
+    "while(new > 0):\n",
+    "    binary = ((new%2)*(10**ctr)) + binary\n",
+    "    new = int(new/2)\n",
+    "    ctr += 1\n",
+    "\n",
+    "#output the result       \n",
+    "print(\"Binary of\", decimal, \" is:\", binary)"
    ]
   },
   {
@@ -136,9 +151,9 @@
    "source": [
     "### Vocab: fill in the blanks using the video\n",
     "Index is a number representing a position, like a character's position in a string or a string's position in a list.  \n",
-    "Concatenation is ______  \n",
-    "Length is ____  \n",
-    "A substring is _______  "
+    "Concatenation is connecting two strings into one\n",
+    "Length is the number of characters or elements in a string or array\n",
+    "A substring is a section of a string, containing some or all of the characters "
    ]
   },
   {
@@ -165,7 +180,15 @@
     "7. Spit\n",
     "8. Wash mouth \n",
     "9. Rinse toothbrush\n",
-    "10. You have brushed your teeth!"
+    "10. You have brushed your teeth!\n",
+    "\n",
+    "My Example: Playing Basketball\n",
+    "1. Get a basketball\n",
+    "2. Use your hands to bounce the ball from the ground to your hand\n",
+    "3. Keep bouncing the ball but move it around a little bit to the left and right\n",
+    "4. Bounce the ball to your hands and hold it with both hands\n",
+    "5. With one hand steady the ball and with the other aim it\n",
+    "6. Next push the ball from your hand to the basket\n"
    ]
   },
   {
