--- a/_notebooks/2022-11-30-homework.ipynb
+++ b/_notebooks/2022-11-30-homework.ipynb
@@ -31,10 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10111\n",
+      "10111\n",
+      "The Binary number for  23 None\n"
+     ]
+    }
+   ],
    "source": [
+    "num = int(input(\"What is your decimal number\"))\n",
     "def DecimalToBinary(num):\n",
     "    strs = \"\"\n",
     "    while num:\n",
@@ -50,12 +61,12 @@
     " \n",
     "# function to reverse the string\n",
     "def reverse(strs):\n",
-    "    print(strs[::-1])\n",
+    "    strv = (strs[::-1])\n",
     " \n",
     "# Driver Code\n",
-    "num = 67\n",
-    "print(\"Binary of num 67 is:\", end=\" \")\n",
-    "reverse(DecimalToBinary(num))"
+    "reverse(DecimalToBinary(num))\n",
+    "\n",
+    "print(\"Binary number for\", num, \"is: \",)"
    ]
   }
  ],
@@ -66,8 +77,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
