--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -24,7 +24,15 @@
     "- In the AP Exam the indexing starts at 1 rather than 0\n",
     "- You can display data in Javascript through a function\n",
     "- You can convert javascript output to html in order for it to look good\n",
+    "- Dictionaries store both a key and value\n",
+    "- Temporary variables can be used to set a value and change that value without affect the first variable\n",
+    "- Const in java sets a variable which cannot be changed\n",
+    "- Data can be pulled from lists\n",
     "\n",
+    "Section 3-4:\n",
+    "- Modulus operator gives the variable after division\n",
+    "- Concatination is the combination of strings \n",
+    "- \n",
     "\n",
     "\n",
     "Section 5-7:\n",
