--- a/_posts/2022-12-01-Week2Notes.md
+++ b/_posts/2022-12-01-Week2Notes.md
@@ -37,7 +37,8 @@ layout: notebook
 <ul>
 <li>Modulus operator gives the variable after division</li>
 <li>Concatination is the combination of strings </li>
-<li></li>
+<li>You can find the length of a string by using the len function in javascript</li>
+<li>Psuedocode is code without a language that gives instructions</li>
 </ul>
 <p>Section 5-7:</p>
 <ul>
