--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -32,7 +32,9 @@
     "Section 3-4:\n",
     "- Modulus operator gives the variable after division\n",
     "- Concatination is the combination of strings \n",
-    "- \n",
+    "- You can find the length of a string by using the len function in javascript\n",
+    "- Psuedocode is code without a language that gives instructions\n",
+    "\n",
     "\n",
     "\n",
     "Section 5-7:\n",
