--- a/_posts/2022-12-01-Week2Notes.md
+++ b/_posts/2022-12-01-Week2Notes.md
@@ -48,6 +48,14 @@ layout: notebook
 <li>Conditionals appear everywhere</li>
 <li>Selection is driven by conditionals</li>
 </ul>
+<p>Section 8-10:</p>
+<ul>
+<li>Lists can be used to store data</li>
+<li>Indexes count an organize data in a list</li>
+<li>Iteration is repeating a function multiple times </li>
+<li>A condition is telling when a system should stop running</li>
+<li>You can use a for loop for element in list</li>
+</ul>
 
 </div>
 </div>
