--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -42,7 +42,14 @@
     "- Boolean operators produce certain numbers\n",
     "- Algorithm is a set of instructions that accomplish a task\n",
     "- Conditionals appear everywhere\n",
-    "- Selection is driven by conditionals"
+    "- Selection is driven by conditionals\n",
+    "\n",
+    "Section 8-10:\n",
+    "- Lists can be used to store data\n",
+    "- Indexes count an organize data in a list\n",
+    "- Iteration is repeating a function multiple times \n",
+    "- A condition is telling when a system should stop running\n",
+    "- You can use a for loop for element in list"
    ]
   }
  ],
