--- a/_notebooks/2022-11-26-listanditerationhomework.ipynb
+++ b/_notebooks/2022-11-26-listanditerationhomework.ipynb
@@ -60,18 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Incorrect\n",
+      "Correct\n",
+      "Correct\n",
       "Correct\n",
       "Correct\n",
       "Incorrect\n",
-      "You got: 50.0 %\n"
+      "You got: 80.0 %\n"
      ]
     }
    ],
@@ -80,10 +81,10 @@
     "\n",
     "def quiz():\n",
     "    points = 0\n",
-    "    questions = [\"Who won the 2021-2022 NBA Championship?\", \"Which NBA franchise has the most MVP winners?\", \"Who won the 2021-2022 NBA MVP?\", \"Which NBA team(s) has the most rings?\"]\n",
-    "    answers = [\"Warriors\", \"Celtics\", \"Nikola Jokic\", \"Celtics\"]\n",
+    "    questions = [\"How do you remove\", \"How do you add\", \"How do you insert\", \"How do you call an index\",\"How do you have a variable equal to a part of the list?\"]\n",
+    "    answers = [\"list.remove\", \"list.append\", \"list.insert\", \"list[i]\", \"x = list[i]\"]\n",
     "    num = 0\n",
-    "    while num <= 3:\n",
+    "    while num <= 4:\n",
     "        answer = input(questions[num])\n",
     "        if answer == answers[num]:\n",
     "            print(\"Correct\")\n",
@@ -91,7 +92,7 @@
     "        else:\n",
     "            print(\"Incorrect\")\n",
     "        num += 1\n",
-    "    print(\"You got:\", (points/4)*100, \"%\")\n",
+    "    print(\"You got:\", (points/5)*100, \"%\")\n",
     "quiz()\n",
     "    #make a function to check if the answer was correct or not"
    ]
@@ -184,8 +185,11 @@
     "binarylist = [\n",
     "    \"01001001\", \"10101010\", \"10010110\", \"00110111\", \"11101100\", \"11010001\", \"10000001\"\n",
     "]\n",
-    "\n",
+    "x = len(binarylist)\n",
     "def binary_convert(binary):\n",
+    "    for i in range x:\n",
+    "        print(\" \")\n",
+    "        \n",
     "    pass\n",
     "    #use this function to convert every binary value in binarylist to decimal\n",
     "    #afterward, get rid of the values that are greater than 100 in decimal\n",
