--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -49,7 +49,10 @@
     "- Indexes count an organize data in a list\n",
     "- Iteration is repeating a function multiple times \n",
     "- A condition is telling when a system should stop running\n",
-    "- You can use a for loop for element in list"
+    "- You can use a for loop for element in list\n",
+    "Section 9 and 11:\n",
+    "- Algorithm is a set of commands that complete a task\n",
+    "- Human steps in code"
    ]
   }
  ],
