--- a/_posts/2022-12-01-Week2Notes.md
+++ b/_posts/2022-12-01-Week2Notes.md
@@ -54,7 +54,10 @@ layout: notebook
 <li>Indexes count an organize data in a list</li>
 <li>Iteration is repeating a function multiple times </li>
 <li>A condition is telling when a system should stop running</li>
-<li>You can use a for loop for element in list</li>
+<li>You can use a for loop for element in list
+Section 9 and 11:</li>
+<li>Algorithm is a set of commands that complete a task</li>
+<li>Human steps in code</li>
 </ul>
 
 </div>
