--- a/_notebooks/2022-11-30-homework.ipynb
+++ b/_notebooks/2022-11-30-homework.ipynb
@@ -31,16 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10111\n",
-      "10111\n",
-      "The Binary number for  23 None\n"
+      "Binary number for 17 is:  10001\n"
      ]
     }
    ],
@@ -62,11 +60,12 @@
     "# function to reverse the string\n",
     "def reverse(strs):\n",
     "    strv = (strs[::-1])\n",
+    "    return strv\n",
     " \n",
     "# Driver Code\n",
-    "reverse(DecimalToBinary(num))\n",
     "\n",
-    "print(\"Binary number for\", num, \"is: \",)"
+    "\n",
+    "print(\"Binary number for\", num, \"is: \",reverse(DecimalToBinary(num)))"
    ]
   }
  ],
