--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -52,7 +52,9 @@
     "- You can use a for loop for element in list\n",
     "Section 9 and 11:\n",
     "- Algorithm is a set of commands that complete a task\n",
-    "- Human steps in code"
+    "- Human steps in code\n",
+    "- Algorithms can be used for iteration or selection\n",
+    "- There are benefits and draw backs to all algorithms"
    ]
   }
  ],
