--- a/_posts/2022-12-01-Week2Notes.md
+++ b/_posts/2022-12-01-Week2Notes.md
@@ -58,6 +58,8 @@ layout: notebook
 Section 9 and 11:</li>
 <li>Algorithm is a set of commands that complete a task</li>
 <li>Human steps in code</li>
+<li>Algorithms can be used for iteration or selection</li>
+<li>There are benefits and draw backs to all algorithms</li>
 </ul>
 
 </div>
