--- a/_notebooks/2022-11-26-listanditerationhomework.ipynb
+++ b/_notebooks/2022-11-26-listanditerationhomework.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +70,8 @@
       "Correct\n",
       "Correct\n",
       "Correct\n",
-      "Correct\n",
       "Incorrect\n",
+      "Correct\n",
       "You got: 80.0 %\n"
      ]
     }
@@ -81,7 +81,7 @@
     "\n",
     "def quiz():\n",
     "    points = 0\n",
-    "    questions = [\"How do you remove\", \"How do you add\", \"How do you insert\", \"How do you call an index\",\"How do you have a variable equal to a part of the list?\"]\n",
+    "    questions = [\"How do you remove an element from a list\", \"How do you add to a list\", \"How do you insert an element into a list\", \"How do you call an index to a list\",\"How do you have a variable equal to a part of the list?\"]\n",
     "    answers = [\"list.remove\", \"list.append\", \"list.insert\", \"list[i]\", \"x = list[i]\"]\n",
     "    num = 0\n",
     "    while num <= 4:\n",
