--- a/_notebooks/2022-11-26-listanditerationhomework.ipynb
+++ b/_notebooks/2022-11-26-listanditerationhomework.ipynb
@@ -177,20 +177,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Struggle:\n",
+    "I struggled with challenge 3.8. I was very confused on how to convert the binary to decimal because I didn't know how to move through the array and multiply the numbers by the power they needed to be multiplied by. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Equivalent Decimal Value =  0\n"
+     ]
+    }
+   ],
    "source": [
     "binarylist = [\n",
     "    \"01001001\", \"10101010\", \"10010110\", \"00110111\", \"11101100\", \"11010001\", \"10000001\"\n",
     "]\n",
-    "x = len(binarylist)\n",
-    "def binary_convert(binary):\n",
-    "    for i in range x:\n",
-    "        print(\" \")\n",
-    "        \n",
-    "    pass\n",
+    "bnum = int(input(\"Money\"))\n",
+    "dnum = 0\n",
+    "i = 0\n",
+    "\n",
+    "while bnum!=0:\n",
+    "    rem = bnum%10\n",
+    "    dnum = dnum + (rem*i)\n",
+    "    i = i *2\n",
+    "    bnum = int(bnum/10)\n",
+    "def binary_convert():\n",
+    "    \n",
+    "\n",
+    "    for bnum in binarylist:\n",
+    "        while bnum!=0:\n",
+    "            rem = bnum%10\n",
+    "            dnum = dnum + (rem*i)\n",
+    "            i = i*2\n",
+    "            bnum = int(bnum/10)\n",
+    "\n",
+    "print(\"\\nEquivalent Decimal Value = \", dnum)\n",
+    "    \n",
+    "\n",
     "    #use this function to convert every binary value in binarylist to decimal\n",
     "    #afterward, get rid of the values that are greater than 100 in decimal\n",
     "\n",
