--- a/_notebooks/2022-11-26-listanditerationhomework.ipynb
+++ b/_notebooks/2022-11-26-listanditerationhomework.ipynb
@@ -181,20 +181,27 @@
    "metadata": {},
    "source": [
     "Struggle:\n",
-    "I struggled with challenge 3.8. I was very confused on how to convert the binary to decimal because I didn't know how to move through the array and multiply the numbers by the power they needed to be multiplied by. "
+    "I struggled with challenge 3.8. I was very confused on how to convert the binary to decimal because I didn't know how to move through the array and multiply the numbers by the power they needed to be multiplied by. I was able to convert one of the binary numbers too decimal however I was unable to do the rest. The end of the code shows how I checked if the output was greater than 100 and how it would be removed if it was. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Equivalent Decimal Value =  0\n"
+      "01001001\n",
+      "10101010\n",
+      "10010110\n",
+      "00110111\n",
+      "11101100\n",
+      "11010001\n",
+      "10000001\n",
+      "The decimal value is: 129\n",
+      "[]\n"
      ]
     }
    ],
@@ -202,28 +209,24 @@
     "binarylist = [\n",
     "    \"01001001\", \"10101010\", \"10010110\", \"00110111\", \"11101100\", \"11010001\", \"10000001\"\n",
     "]\n",
-    "bnum = int(input(\"Money\"))\n",
-    "dnum = 0\n",
-    "i = 0\n",
     "\n",
-    "while bnum!=0:\n",
-    "    rem = bnum%10\n",
-    "    dnum = dnum + (rem*i)\n",
-    "    i = i *2\n",
-    "    bnum = int(bnum/10)\n",
-    "def binary_convert():\n",
-    "    \n",
+    "decimallist = []\n",
+    "for binary in binarylist:\n",
+    "    print(binary)\n",
     "\n",
-    "    for bnum in binarylist:\n",
-    "        while bnum!=0:\n",
-    "            rem = bnum%10\n",
-    "            dnum = dnum + (rem*i)\n",
-    "            i = i*2\n",
-    "            bnum = int(bnum/10)\n",
+    "    def binary_convert(binarylist):\n",
+    "        decimal = 0\n",
+    "        for digit in binary:\n",
+    "            decimal = decimal*2 + int(digit)\n",
+    "        print(\"The decimal value is:\", decimal)\n",
+    "        decimallist.append(decimal)\n",
     "\n",
-    "print(\"\\nEquivalent Decimal Value = \", dnum)\n",
-    "    \n",
+    "binary_convert(binarylist)\n",
     "\n",
+    "for i in decimallist:\n",
+    "    if i > 100:\n",
+    "        decimallist.remove(i)\n",
+    "print(decimallist)\n",
     "    #use this function to convert every binary value in binarylist to decimal\n",
     "    #afterward, get rid of the values that are greater than 100 in decimal\n",
     "\n",
