--- a/_notebooks/2022-11-26-listanditerationhomework.ipynb
+++ b/_notebooks/2022-11-26-listanditerationhomework.ipynb
@@ -22,8 +22,6 @@
     "- Lists can be used to store data\n",
     "- Indexes count an organize data in a list\n",
     "- Iteration is repeating a function multiple times \n",
-    "- A condition is telling when a system should stop running\n",
-    "- You can use a for loop for element in list\n",
     "\n",
     "\n",
     "Fill out the empty boxes: \n",
@@ -46,12 +44,9 @@
     "## Overview and Notes:  3.8 - Iteration\n",
     "\n",
     "Add your <mark>OWN</mark> Notes for 3.8 here: \n",
-    "- Lists can be used to store data\n",
-    "- Indexes count an organize data in a list\n",
-    "- Iteration is repeating a function multiple times \n",
     "- A condition is telling when a system should stop running\n",
     "- You can use a for loop for element in list\n",
-    "\n",
+    "- You can use the list functions to manupulate the list items\n",
     "\n"
    ]
   },
