--- a/_notebooks/2022-11-18-expressions-and-strings.ipynb
+++ b/_notebooks/2022-11-18-expressions-and-strings.ipynb
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "decimal = int(input(\"Enter a decimal number \\n\"))\n",
+    "decimal = int(input(\"Enter a decimal number\"))\n",
     "binary = 0\n",
     "ctr = 0\n",
     "new = decimal \n",
