--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -15,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,7 +55,11 @@
     "- Algorithm is a set of commands that complete a task\n",
     "- Human steps in code\n",
     "- Algorithms can be used for iteration or selection\n",
-    "- There are benefits and draw backs to all algorithms"
+    "- There are benefits and draw backs to all algorithms\n",
+    "Section 12-13:\n",
+    "- New parameters and arguments give a different output\n",
+    "- You call a function, define it then call it then put in your parameters\n",
+    "- Insert values into a function for a certain output"
    ]
   }
  ],
