--- a/_posts/2022-11-30-homework.md
+++ b/_posts/2022-11-30-homework.md
@@ -68,6 +68,20 @@ layout: notebook
 </div>
 </div>
 
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Binary number for 17 is:  10001
+</pre>
+</div>
+</div>
+
+</div>
+</div>
+
 </div>
     {% endraw %}
 
