--- a/_posts/2022-12-01-Week2Notes.md
+++ b/_posts/2022-12-01-Week2Notes.md
@@ -64,6 +64,9 @@ Section 12-13:</li>
 <li>New parameters and arguments give a different output</li>
 <li>You call a function, define it then call it then put in your parameters</li>
 <li>Insert values into a function for a certain output</li>
+<li>Splice function splits up different parts of a string</li>
+<li>Its a pain to rewrite code multiple times rather than defining it as a function</li>
+<li>Modularity is needed for large coding projects</li>
 </ul>
 
 </div>
