--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -59,7 +59,10 @@
     "Section 12-13:\n",
     "- New parameters and arguments give a different output\n",
     "- You call a function, define it then call it then put in your parameters\n",
-    "- Insert values into a function for a certain output"
+    "- Insert values into a function for a certain output\n",
+    "- Splice function splits up different parts of a string\n",
+    "- Its a pain to rewrite code multiple times rather than defining it as a function\n",
+    "- Modularity is needed for large coding projects"
    ]
   }
  ],
