--- a/_notebooks/2022-11-29-searching-introduction.ipynb
+++ b/_notebooks/2022-11-29-searching-introduction.ipynb
@@ -443,14 +443,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
-    "def sqrt(N):\n",
-    "    # Write your code here\n",
-    "    \n",
-    "    return None"
+    "x = 4\n",
+    "def sqrt(x):\n",
+    "\n",
+    "    if x < 2:\n",
+    "        print(x)\n",
+    "\n",
+    "    y = x\n",
+    "    z = (y + (x/y)) / 2\n",
+    "\n",
+    "    while (y - z) > 0:\n",
+    "    \ty = z\n",
+    "        z = (y + (x/y)) / 2\n",
+    "        \n",
+    "    return z\n",
+    "   \n",
+    "print(sqrt(x))\n"
    ]
   },
   {
