--- a/_notebooks/2022-12-1-notetemplate.ipynb
+++ b/_notebooks/2022-12-1-notetemplate.ipynb
@@ -129,7 +129,7 @@
     "const a = 30\n",
     "const b = 10\n",
     "if (a > b) {\n",
-    "    console.log(\"Higher\")\n",
+    "    console.log(\"higher\")\n",
     "} else {\n",
     "    console.log(\"Lower\")\n",
     "}"
