--- a/_notebooks/2022-11-29-Developing-Algorithms.ipynb
+++ b/_notebooks/2022-11-29-Developing-Algorithms.ipynb
@@ -109,17 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "it is too hot outside\n"
+     ]
+    }
+   ],
    "source": [
     "temp = 95\n",
     "if (temp >= 90):\n",
     "    print(\"it is too hot outside\")\n",
-    "if (temp >= 65):\n",
-    "    print(\"i will go outside\")\n",
-    "if (temp < 65):\n",
-    "    print(\"it is too cold outside\")"
+    "elif (temp >= 65):\n",
+    "    print(\"it is too hot outside\")\n",
+    "elif (temp < 65):\n",
+    "    print(\"it is too hot outside\")"
    ]
   },
   {
@@ -219,6 +227,45 @@
     "4. repeat steps 2 and 3 until you reach 1\n",
     "\n",
     "Example: if the starting number was 6, the output would be 6, 3, 10, 5, 16, 8, 4, 2, 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n",
+      "52\n",
+      "26\n",
+      "13\n",
+      "40\n",
+      "20\n",
+      "10\n",
+      "5\n",
+      "16\n",
+      "8\n",
+      "4\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "num = 34\n",
+    "while num != 1:\n",
+    "    if num % 2 == 0:\n",
+    "        num = int(num/2)\n",
+    "        print(num)\n",
+    "    else:\n",
+    "        num = int((num * 3) + 1)\n",
+    "        print(num)\n",
+    "        \n"
    ]
   }
  ],
